# xelix

./: .autobuildcmds  .gdbinit  .gitattributes  .gitignore  .gitmodules  AUTHORS  CODING  COPYING  Cargo.toml  Containerfile  Kconfig  Makefile  Makefile.footer  Makefile.header  Makefile.static  README  README.markdown  README.md  README.rst  Readme.rst  THANKS  TODO  bochsrc.txt  build-xsfs.sh  common.c  common.h  configure  crt0.asm  floppy.img  grub_floppy.img  initrd.img  linker.ld  mainpage.h  mkdocs.yml  newname  rust-toolchain.toml  template.py  x86-unknown-bare_metal.json
.github/workflows/: docs.yml  kernel.yml  nightly.yaml  toolchain.yml
common/: acpi.c  acpi.h  acpi.h.bak  bitmap.c  bitmap.h  datetime.c  datetime.h  fio.c  fio.h  generic.c  generic.h  log.c  log.h  memcpy.c  memcpy.h  multiboot.c  multiboot.h  stdconf.h  string.c  string.h
devices/ata/: generic.c  generic.h  interface.h
devices/cpu/: generic.c
doc/: interrupts.txt  resources.md  vfs.txt  virtual-memory.md
docs/: Makefile  boot.md  boot.rst  compiling.md  compiling.rst  conf.py  fs.md  fs.rst  gfxcompd.md  index.md  index.rst  int.md  int.rst  lib.md  lib.rst  mem.md  mem.rst  net.md  pyproject.toml  syscalls.rst  tasks.md  tasks.rst  tty.rst  xelix-utils.md  xelix-utils.rst
examples/: Makefile  README.txt  fork-test.asm
ext/: README
ext/picotcp/: Makefile  (+2 more)
filesystems/: generic.c  interface.h  vfs.c  vfs.h
include/: iso646.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  unistd.h
init/: debugconsole.c  debugconsole.c.bak  debugconsole.h  debugconsole.h.bak  loader.S  loader.asm  loader.s  main.c  main.c.orig  start.c
interrupts/: README  idt.asm  idt.c  idt.h  interface.h  interrupts.asm  interrupts.c  irq.c  irq.h  isr.c  isr.h  pit.c  pit.h
land/: Makefile  cat.c  default.yml  ls.c  pwd.c  setenv.sh  xinit.c  xshell.c
libc/: .gitignore  Makefile.footer  Makefile.header  Readme.rst  configure  crt0.asm
memory/: README  gdt.c  gdt.h  interface.h  kheap.c  kheap.h  kmalloc.c  kmalloc.h  memory.c  paging.c  paging.h
processes/: process.c  process.h  scheduler.c  scheduler.h  switchcontext.asm
src/: dict.h  init.asm  init.c  init.h  rust_init.rs
templates/: Makefile.footer  Makefile.header  example.asm  example.c  example.h  example.py
toolchain/: .gitignore  Makefile
toolchain/content/newlib/: Makefile.am  call.h  call.s  crt0.c  crt0.s  gettimeofday.c  inet_addr.c  mntent.c  pututline.c  stubs.c  syscalls.c
toolchain/content/newlib/include/: dlfcn.h  mntent.h  netdb.h  poll.h  sgtty.h  termios.h
toolchain/content/newlib/include/arpa/: inet.h
toolchain/content/newlib/include/bits/: wordsize.h
toolchain/content/newlib/include/netinet/: in.h
toolchain/content/newlib/net/: if.h
toolchain/content/newlib/sys/: dirent.h  ioctl.h  limits.h  resource.h  select.h  signal.h  socket.h  types.h  uio.h  utime.h  utsname.h  wait.h  xelix.h
toolchain/userspace/content/newlib/: Makefile.am  call.h  call.s  configure.in  crt0.c  inet_ntoa.c  stubs.c  syscalls.c
toolchain/userspace/content/newlib/include/: endian.h  sgtty.h
toolchain/userspace/content/newlib/include/arpa/: inet.h
toolchain/userspace/content/newlib/include/netinet/: in.h
toolchain/userspace/content/newlib/sys/: cdefs.h  execnew.h  limits.h  select.h  socket.h  termios.h  utmp.h  utsname.h  wait.h  xelix.h
tools/: floppy.img  helloworld  helloworld.asm  keymap.py  linecount.sh  makefile.py  makeinitrd  makeinitrd.c  test.txt  txtconfig.py
util/: build-empty-image.sh  build-image.sh  buildpkgs.sh  findleaks.py  genconfigh.sh  setenv.sh
util/xpkg/: package.py  pyproject.toml  xpkg
(+1021 files in other folders)
