[package]
name = "xrust"
version = "0.1.0"
edition = "2021"

[lib]
name = "xelix"
crate-type = ["staticlib"]
path = "src/rust_init.rs"

[dependencies]
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
#debug = true
