[tool.poetry]
name = "xelix-docs"
version = "0.1.0"
description = "Dependencies for Xelix documentation generation"
authors = ["Lukas Martini <hello@lutoma.org>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.1"
mkdocs-minify-plugin = "^0.5.0"
mkdocs-mermaid2-plugin = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
